--- a/views/index.html
+++ b/views/index.html
@@ -2,29 +2,17 @@
 <html>
 
 <head>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>Sloan Dala</title>
-    <style>
-        body {
-            font-family: Helvetica, Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            border-top: 2px solid #4c4066;
-            background: url('/images/zikhona.jng');
-            background-size: 420px auto, auto 900px;
-        }
 
-        ul {
-            list-style: none;
-        }
-    </style>
+    <title>Sloan Dala</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <img src="images/17630143_1343438439070265_6833053471861972769_n (1).png" alt="hh">
     <h1>SLOAN DALA</h1>
     <h2>AN OUTFIT TO EXUDE INDIVIDUAL TRUTH</H2>
 
 </head>
 
 <body>
-    <!-- <img src="images/zikhona.jng"> -->
+
     <ul class="blocks">
         <li>
             <a href="/home">Home</a></li>
