manage to fix background iage

--- a/views/about.html
+++ b/views/about.html
@@ -3,10 +3,15 @@
 
 <head>
     <h1> About Us </h1>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+
 
 </head>
 
 <body>
+    <div id="picture">
+        <img src="./images/about.jpg">
+    </div>
     <p>Sloan Dala is a women’s clothing brand that invites you to you to express your true African spirit through sophisticated clothing inspired by ancient African culture and modern styling. Sloan Dala was founded by Zikhona Gwadiso – an emerging creative
         born in Centane, Nxaxo B. The name was inspired by her grandfather Sloan “Zweliwinile” Ngamntwini and her clan name “Dala” meaning to “create”. Dala is the forefather of every generation that came after. Together, the name carries a rich culture
         that exudes truth. When you know yourself, you are enlightened, the brand seeks to create a conversation about African culture through clothing. Through her life journey, Zikhona learned that she was invisible without the identify of her grandfather.
@@ -15,10 +20,6 @@
         to come back in the cities with a little bit of knowledge about the Xhosa attire for women and accessories. Her grandmother presented her with “iziphanga” and Isikhubusi. Iziphanga are beads made for young Xhosa maidens to wear around the arm.
         Isikhubusi that her grandmother presented her with belonged to her great grandmother, meaning it more than 100 years old. The well thought design of Isikhubusi inspired the young creative to develop a range purely inspired by the beauty of isikhubusi
         and the beading she was gifted with by her grandmother. “He who knows others is wise; he who knows himself is enlightened.”.</p>
-
-    <div id "picture">
-        <img src="images/about.jpg">
-    </div>
 </body>
 
 
