--- a/views/contact.html
+++ b/views/contact.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+
     <h1>Contact Us</h1>
     <p> Zikhona Gwadiso 0622734158
     </p>
