--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,26 +1,46 @@
-/*body {
+body {
     font-family: Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
-    border-top: 2px solid #4c4066;
-    background-image: url('about.jpg');
-    background-size: 420px auto, auto 900px;
-}*/
-body {
-  color: hotpink;
+    background-image: url('../images/zikhona.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 h2 {
     font-size: 14px;
 }
 
-.block {
+.blocks {
     display: block;
+    padding: 10px;
+    margin-top: 17em;
+    color : white;
+    background-color: black;
+    width: 7em;
+    opacity: 0.25
+}
+
+a {
+  color : white;
+  padding : 0.25em;
+}
+
+a:hover {
+  display: block;
+  background-color: blue;
 }
 
 ul {
     list-style: none;
+    /*padding: : 10px;*/margin: 0px 0px 100px 0px;
+    /*float: bottom;*/
 }
 
 p {
-  float: left;
+
+}
+
+#picture {
+  width: 200px;
+  height: auto;
 }
