--- a/views/index.html
+++ b/views/index.html
@@ -4,26 +4,27 @@
 <head>
 
     <title>Sloan Dala</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <img src="images/17630143_1343438439070265_6833053471861972769_n (1).png" alt="hh">
-    <h1>SLOAN DALA</h1>
-    <h2>AN OUTFIT TO EXUDE INDIVIDUAL TRUTH</H2>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <!-- <img src="../images/zikhona.png" alt="hh"> -->
+    <!-- <h1>SLOAN DALA</h1>
+    <h2>AN OUTFIT TO EXUDE INDIVIDUAL TRUTH</H2> -->
 
 </head>
 
 <body>
+    <div class="list">
+        <ul class="blocks">
+            <li>
+                <a href="/home">Home</a></li>
 
-    <ul class="blocks">
-        <li>
-            <a href="/home">Home</a></li>
+            <li><a href="/about">About</a></li>
 
-        <li><a href="/about">About</a></li>
+            <li><a href="/portfolio">Portfolio</a></li>
 
-        <li><a href="/portfolio">Portfolio</a></li>
+            <li><a href="/journal">Journal</a></li>
 
-        <li><a href="/journal">Journal</a></li>
-
-        <li><a href="/contact">Contact Us</a></li>
-    </ul>
+            <li><a href="/contact">Contact Us</a></li>
+        </ul>
+    </div>
 </body>
 </html
